--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
       </head>
       <body>
         <centre><h1>James Spence</h1></centre>
-        <p>Email: james.spence@kcl.ac.uk
+        <p><b>Email:</b> james.spence@kcl.ac.uk <br>
         Bush House 30 Aldwych
         London
         WC2B 4BG</p>
         <p>
-
-
-          
+            <br>
+            <br>
+            <br>
         </p>
-        <p>Bio: I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results.
+        <p><b>Bio:</b> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results.
           I am a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
         </p>
       </body>
