--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
         <meta name="description" content="Personal Website">
       </head>
       <body>
-        <centre><h1>James Spence</h1></centre>
-        <p><b>Email:</b> james.spence@kcl.ac.uk <br>
+        <center><h1>James Spence</h1></center>
+        <center><p><strong>Email:</strong> james.spence@kcl.ac.uk <br>
         Bush House 30 Aldwych
         London
-        WC2B 4BG</p>
+        WC2B 4BG</p></center>
         <p>
             <br>
             <br>
             <br>
         </p>
-        <p><b>Bio:</b> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results.
+        <p><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results.
           I am a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
         </p>
       </body>
