--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title>James Spence Personal Website</title>
         <meta name="description" content="Personal Website">
       </head>
+        <style>
+            div {
+                max-width: 1500px;
+            }
+        </style>
       <body>
         <center><h1>James Spence</h1></center>
         <center><p><strong>Email:</strong> james.spence@kcl.ac.uk <br>
@@ -13,10 +18,9 @@
         <p>
             <br>
             <br>
-            <br>
         </p>
-        <p><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results.
+        <center><div><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results.
           I am a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
-        </p>
+        </div></center>
       </body>
     </html>
