--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <br>
         </p>
         <center>
-            <div><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results in differential geometry. <br>
+            <p><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results in differential geometry. <br>
                 I am a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
-            </div>
+            </p>
         </center>
     </body>
 </html>
