--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title>James Spence Personal Website</title>
         <meta name="description" content="Personal Website">
     </head>
+    <style>
+        p {
+            max-width: 1000px;
+        }
+    
+    </style>
     <body>
         <center>
             <h1>James Spence</h1>
@@ -18,10 +24,8 @@
             <br>
             <br>
         </p>
-        <center>
             <p><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results in differential geometry. <br>
                 I am a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
             </p>
-        </center>
     </body>
 </html>
