--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Personal Website">
     </head>
     <style>
-        p {
+        div {
             max-width: 1000px;
         }
     
@@ -24,8 +24,8 @@
             <br>
             <br>
         </p>
-            <p><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results in differential geometry. <br>
-                I am a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
-            </p>
+        <div><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is Mohammad Abdulaziz and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results in differential geometry. <br>
+                I am also a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
+        </div>
     </body>
 </html>
