--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
             <br>
             <br>
         </p>
-        <p style = "width:1000px; text-align:left;"><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is <a href = "https://mabdula.github.io/">Mohammad Abdulaziz</a> and my research involves formalising Mathematics in Isabelle/HOL. My research interests are formalising matching algorithms as well as formalising results in differential geometry. I am also a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems.
+        <p style = "width:1000px; text-align:left;"><strong>Bio:</strong> I am a currently a first-year PhD student a King's College London in the department of Informatics. I studied my undergraduate at the University of Warwick where received my MMath. My PhD supervisor is <a href = "https://mabdula.github.io/">Mohammad Abdulaziz</a> and my research involves formalising Mathematics in Isabelle/HOL. I am also a member of the CDT: Centre for Safe and Trusted AI who's focus is on using Symbolic AI techniques to create trustworthy and safe AI systems. <br> <br>
+            <b>Research Interests:</b>
+            <ul>
+                <li>Formalising matching algorithms with social welfare applications e.g.
+                    <ul>
+                        <li>School Pupil Matching</li>
+                        <li>Refugee Resettlement</li>
+                    </ul>
+                </li>
+                    
+                <li>Formalising results in differential geometry e.g.
+                    <ul>
+                        <li>Results relating to Green's Theorem</li>
+                        <li>The Isoperimetric Problem</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </body>
 </html>
